# MyDesignPatternExamples

observer_pattern/: CMakeLists.txt  README.md  main.cpp
observer_pattern/Observables/: IObservable.cpp  IObservable.h  WeatherStation.cpp  WeatherStation.h
observer_pattern/Observers/: IObserver.cpp  IObserver.h  TypeADisplay.cpp  TypeADisplay.h  TypeBDisplay.cpp  TypeBDisplay.h
strategy_pattern/: CMakeLists.txt  Equation.cpp  Equation.h  README.md  main.cpp
strategy_pattern/Solver/: ISolver.h  TypeASolver.cpp  TypeASolver.h  TypeBSolver.cpp  TypeBSolver.h
